--- a/mirador.html
+++ b/mirador.html
@@ -20,8 +20,9 @@
                     "windows": [
                         {
                             "loadedManifest": manifest,
-                            "canvasIndex": 0,
-                            "thumbnailNavigationPosition": 'far-bottom'
+                            "canvasIndex": 0
+
+                            // "thumbnailNavigationPosition": 'far-bottom'
                         }
                     ]
                 })
