--- a/vault.html
+++ b/vault.html
@@ -4,7 +4,16 @@ title: Vault IIIF Examples
 permalink: /vault
 description: Examples using items from vault.library.uvic.ca
 ---
-<h1>Find a Manifest for a Work</h1>
+<h1>Examples on this Page</h1>
+
+<ul class="quicklinks">
+    <li><a href="#vault-find-a-manifest">Find a Manifest for an Item</a></li>
+    <li><a href="#vault-specific-size-or-region">Images of a Specific Size or Region</a></li>
+    <li><a href="#vault-use-a-manifest">Use a Manifest with Your Own Viewer</a></li>
+    <li><a href="#vault-use-custom-metadata">Use Custom Metadata with a Vault Manifest</a></li>
+</ul>
+
+<h1><a name="vault-find-a-manifest">Find a Manifest for a Work</a></h1>
 
 <ol>
     <li>If using Chrome, download the <a href="https://chromewebstore.google.com/detail/json-formatter/bcjindcccaagfpapjjmafapmmgkkhgoa" target="_blank">JSON Formatter extension</a>. (It makes reading and copying JSON much easier.)</li>
@@ -14,11 +23,11 @@ description: Examples using items from vault.library.uvic.ca
         for that work (<a href="https://vault.library.uvic.ca/concern/generic_works/4ca5b526-94b8-496b-bc70-05d4b1c83d6e/manifest.json" target="_blank">example</a>).</li>
 </ol>
 
-<h1>Images of a Specific Size or Region</h1>
+<h1><a name="vault-specific-size-or-region">Images of a Specific Size or Region</a></h1>
 
 <p>For instructions and examples of how to request images using IIIF, see the <a href="/image-api">Image API page</a>.</p>
 
-<h1>Use a Manifest with Your Own Viewer</h1>
+<h1><a name="vault-use-a-manifest">Use a Manifest with Your Own Viewer</a></h1>
 
 <p>The following embedded <a href="https://projectmirador.org/" target="_blank">Mirador viewer</a> uses a manifest from Vault.
     Click the menu symbol (3 lines) to see the manifest metadata.</p>
@@ -30,10 +39,10 @@ description: Examples using items from vault.library.uvic.ca
 <div class="mirador-example-links">
     <a href="https://vault.library.uvic.ca/concern/generic_works/fb46f8fc-25e8-45e7-b089-21639a363b53/manifest.json" target="_blank" >Manifest for this example</a> |
     <a href="https://codepen.io/eltiffster/pen/YzbeBeM" target="_blank">Code example on CodePen</a> |
-    <a href="https://codepen.io/eltiffster/pen/ExzQrJe" target="_blank">Embed code example on CodePen</a>
+    <a href="https://codepen.io/eltiffster/pen/ExzQrJe" target="_blank">Embedded code example on CodePen</a>
 </div>
 
-<h1>Use Custom Metadata with a Vault Image</h1>
+<h1><a name="vault-use-custom-metadata">Use Custom Metadata with a Vault Image</a></h1>
 
 <p>
     By editing a manifest for a Vault image and passing our new manifest's URL to a IIIF viewer,
