Change title of Image API page

--- a/image-api.html
+++ b/image-api.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Image API
+title: How to Use the Image API
 description: Requesting & displaying images using the IIIF Image API
 ---
 <h1><a name="size">"Resizing" images using IIIF</a></h1>
