Update title and description.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: UVic Libraries IIIF Demo
-description: Using IIIF to access the Libraries' image collections
+title: IIIF By Example
+description: Using IIIF to access UVic Libraries' image collections
 ---
 <h1><a name="about">About</a></h1>
 <p>This website with different examples of how to leverage IIIF to access the University of Victoria ("UVic") Libraries' image collections. The Libraries currently manage two platforms that support IIIF: <a href="https://vault.library.uvic.ca" target="_blank">Vault</a> and <a href="https://exhibits.library.uvic.ca" target="_blank">Spotlight</a> (digital exhibits).</p>
