Update codepen examples and their links.

--- a/spotlight.html
+++ b/spotlight.html
@@ -34,8 +34,8 @@ description: Examples using items from exhibits.library.uvic.ca
 
 <div class="mirador-example-links">
     <a href="https://exhibits.library.uvic.ca/spotlight/mcm/catalog/10-12641/manifest.json" target="_blank" >Manifest for this example</a> |
-    <a href="https://codepen.io/eltiffster/pen/bGyvWGP" target="_blank">Code example on CodePen</a> |
-    <a href="https://codepen.io/eltiffster/pen/bGyvWGP" target="_blank">Embedded code example on CodePen</a>
+    <a href="https://codepen.io/eltiffster/pen/bGyvWGP" target="_blank">HTML code example</a>
+    <a href="https://codepen.io/eltiffster/pen/zYVoKgy" target="_blank">Iframe code example</a>
 </div>
 
 <h1><a name="spotlight-use-custom-metadata">Use Custom Metadata with a Spotlight Manifest</a></h1>
