--- a/vault.html
+++ b/vault.html
@@ -38,8 +38,8 @@ description: Examples using items from vault.library.uvic.ca
 
 <div class="mirador-example-links">
     <a href="https://vault.library.uvic.ca/concern/generic_works/fb46f8fc-25e8-45e7-b089-21639a363b53/manifest.json" target="_blank" >Manifest for this example</a> |
-    <a href="https://codepen.io/eltiffster/pen/YzbeBeM" target="_blank">Code example on CodePen</a> |
-    <a href="https://codepen.io/eltiffster/pen/ExzQrJe" target="_blank">Embedded code example on CodePen</a>
+    <a href="https://codepen.io/eltiffster/pen/YzbeBeM" target="_blank">HTML code example</a> |
+    <a href="https://codepen.io/eltiffster/pen/ExzQrJe" target="_blank">Iframe code example</a>
 </div>
 
 <h1><a name="vault-use-custom-metadata">Use Custom Metadata with a Vault Image</a></h1>
